--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 <body>
     <h1 style = 'color: black'> final project </h1>
     <h3>an introduction</h3>
-    <p id = 'main'> Hi my name is Jasmine and I am currently on my last semester at Northeastern University as a 
-        data science and marketing analytics major. Something that I am passionate in is creating and painting pottery.
-        I have taken a couple of classes and would love to take more and create pieces I am proud of and can give away as gifts. 
-        I want my next pottery piece to be a matcha bowl that contains a spout so it is easier for me to pour it into a cup. I also 
-        like the idea of gifting my creations to my loved ones. 
+    <p id = 'main'>
     </p>
-    <button id = 'navigateButton'> learn more about pottery! </button>
+    <button id = 'navigateButton'> button </button>
 
     <script>
         const navigateButton = document.getElementById("navigateButton")
@@ -24,12 +20,6 @@
         }
     )
     </script>
-
-<p class = 'picture'> <img src = "https://wpcdn.us-midwest-1.vip.tn-cloud.net/www.rimonthly.com/content/uploads/2020/07/Pottery-1024x690.jpg" alt = " " width = 300> </p>
-<p>my contact information
-    <li> <a href="chiou.ja@northeastern.edu">my email address</a> </li>
-    <li> <a href= "https://www.linkedin.com/in/jasmine-chiou/">my linkedin </a> </li>
-</p>
 
 
 </body>
