--- a/nidhi-d3/d3-plot.html
+++ b/nidhi-d3/d3-plot.html
@@ -11,6 +11,6 @@
     </div>
     
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="interactive.js"></script>   
+    <script src="d3-plot.js"></script>   
 </body>
 </html>
