--- a/index.html
+++ b/index.html
@@ -3,24 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>final project</title>
-    <link rel = 'stylesheet' href="style.css">
+    <title>Visualizing Biodiversity in California National Parks</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style = 'color: black'> final project </h1>
-    <h3>an introduction</h3>
-    <p id = 'main'>
-    </p>
-    <button id = 'navigateButton'> button </button>
+    <header>
+        <h1>Welcome!</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">The Dangers of Invasive Species</a>
+        </nav>
+    </header>
 
-    <script>
-        const navigateButton = document.getElementById("navigateButton")
-        navigateButton.addEventListener('click', function() {
-            window.location.href = 'second_page.html';
-        }
-    )
-    </script>
+    <main>
+        <section>
+            <h2>Introduction</h2>
+            <p>blah blah</p>
+            <h4>My Interests/Hobbies</h4>
+            <p>blah blah</p>
+        </section>
 
+        <section>
+            <h2>Creators</h2>
+            <ul>
+                <li>Nidhi Hosamane</li>
+                <li>Jasmine</li>
+                <li>Maahir</li>
+                <li>Ryan</li>
+            </ul>
+        </section>
+    </main>
 
+    <footer>
+        <p>DS4200 2024</p>
+    </footer>
 </body>
 </html>
