--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Welcome!</h1>
+        <h1>Visualizing Biodiversity in California National Parks</h1>
         <nav>
             <a href="index.html">Home</a>
+            <a href="about.html">California's Diverse Species</a>
             <a href="about.html">The Dangers of Invasive Species</a>
         </nav>
     </header>
@@ -18,18 +19,40 @@
     <main>
         <section>
             <h2>Introduction</h2>
-            <p>blah blah</p>
-            <h4>My Interests/Hobbies</h4>
-            <p>blah blah</p>
+            <p>Welcome to Visualizing Biodiversity in California National Parks, where you can explore various visualizations that 
+                demonstrate biodiversity and other species-related information such as abundance, nativeness, and more! This topic is 
+                interesting because biodiversity is key to having healthy ecosystems, which includes providing humans with clean air, 
+                water, food, medicine, and a stable climate in addition to the millions of other species on Earth. Focusing on biodiversity 
+                specifically in U.S. National Parks can give us valuable insights into how protected areas contribute to the preservation 
+                of diverse species and ecosystems. National Parks serve as crucial refuges for wildlife and plant species, many of which 
+                are threatened by human activities like deforestation, urbanization, and climate change. By studying biodiversity in 
+                these parks, we can better understand the impact of conservation efforts, inform future policies, and highlight the 
+                importance of preserving natural habitats not only for ecological balance but also for sustaining human well-being.</p>
+            <h4>Data Source and Details</h4>
+            <p>The data for this project comes from the National Park Service, which is a branch of the U.S. Department of the Interior. 
+                The specific project that the data comes from is called <a href="https://irma.nps.gov/NPSpecies/">“NPSpecies”</a>. 
+                NPSpecies is the National Park Service’s web-based tool for documenting the occurrence and status of species in U.S. 
+                national parks, and provides a way to build, manage, maintain, and share these park species lists by allowing users to 
+                filter specific parks, species type, etc. and export the data to an Excel/CSV file. All of the data on NPSpecies comes 
+                from an official government source, so it can be considered both reputable and accurate. The NPSpecies tool allows you to get, 
+                at most, information for all plant and animal species from all national parks in the United States. However, for the 
+                purposes of our project, this would result in too many rows, so we chose to focus on only national parks in California, since 
+                California has the most biodiversity of any state. Narrowing down the objective of our project and filtering our data 
+                accordingly helps us have a more manageable dataset and a more focused project. 
+                
+                Each row is one species that has been observed, including plants and animals. The 33 total columns include 
+                information such as the species category, scientific name, common name, occurrence, nativeness, and abundance, 
+                but not all 33 are useful to our analysis since a few are incomplete or repetitive. The final number of rows in our 
+                data is [FILL THIS IN]. </p>
         </section>
 
         <section>
             <h2>Creators</h2>
             <ul>
+                <li>Jasmine Chiou</li>
                 <li>Nidhi Hosamane</li>
-                <li>Jasmine</li>
-                <li>Maahir</li>
-                <li>Ryan</li>
+                <li>Ryan Masoud</li>
+                <li>Maahir Raval</li>
             </ul>
         </section>
     </main>
