--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Visualizing Biodiversity in California National Parks</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">California's Diverse Species</a>
-            <a href="about.html">The Dangers of Invasive Species</a>
+            <a href="california.html">California's Diverse Species</a>
+            <a href="invasive.html">The Dangers of Invasive Species</a>
         </nav>
     </header>
 
@@ -28,7 +28,7 @@
                 are threatened by human activities like deforestation, urbanization, and climate change. By studying biodiversity in 
                 these parks, we can better understand the impact of conservation efforts, inform future policies, and highlight the 
                 importance of preserving natural habitats not only for ecological balance but also for sustaining human well-being.</p>
-            <h4>Data Source and Details</h4>
+            <h2>Data Source and Details</h2>
             <p>The data for this project comes from the National Park Service, which is a branch of the U.S. Department of the Interior. 
                 The specific project that the data comes from is called <a href="https://irma.nps.gov/NPSpecies/">“NPSpecies”</a>. 
                 NPSpecies is the National Park Service’s web-based tool for documenting the occurrence and status of species in U.S. 
@@ -36,10 +36,10 @@
                 filter specific parks, species type, etc. and export the data to an Excel/CSV file. All of the data on NPSpecies comes 
                 from an official government source, so it can be considered both reputable and accurate. The NPSpecies tool allows you to get, 
                 at most, information for all plant and animal species from all national parks in the United States. However, for the 
-                purposes of our project, this would result in too many rows, so we chose to focus on only national parks in California, since 
-                California has the most biodiversity of any state. Narrowing down the objective of our project and filtering our data 
-                accordingly helps us have a more manageable dataset and a more focused project. 
-                
+                purposes of our project, this would result in too many rows, so we chose to focus on only three national parks in California, 
+                since California has the most biodiversity of any state. Narrowing down the objective of our project and filtering our data 
+                accordingly helps us have a more manageable dataset and a more focused project. </p>
+            <p>
                 Each row is one species that has been observed, including plants and animals. The 33 total columns include 
                 information such as the species category, scientific name, common name, occurrence, nativeness, and abundance, 
                 but not all 33 are useful to our analysis since a few are incomplete or repetitive. The final number of rows in our 
@@ -47,7 +47,7 @@
         </section>
 
         <section>
-            <h2>Creators</h2>
+            <h3>Creators</h3>
             <ul>
                 <li>Jasmine Chiou</li>
                 <li>Nidhi Hosamane</li>
