--- a/invasive.html
+++ b/invasive.html
@@ -11,7 +11,8 @@
         <h2>California's Diverse Species</h2>
         <nav>
             <a href="index.html">Home</a>
-            <a href="california.html">Calfornia's Diverse Species</a>
+            <a href="california.html">California's Diverse Species</a>
+            <a href="invasive.html">The Dangers of Invasive Species</a>
         </nav>
     </header>
 
