--- a/invasive.html
+++ b/invasive.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Dangers of Invasive Species</title>
+    <title>Visualizing Biodiversity in California National Parks</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h2>California's Diverse Species</h2>
+        <h1>Visualizing Biodiversity in California National Parks</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="california.html">California's Diverse Species</a>
