--- a/invasive.html
+++ b/invasive.html
@@ -20,6 +20,7 @@
         <section>
             <h2>About this page</h2>
             <p>This page talks about blah blah blah</p>
+            <iframe src="sankey.html" width="100%" height="600"></iframe>
     </main>
 
     <footer>
