--- a/index.html
+++ b/index.html
@@ -39,20 +39,27 @@
                 purposes of our project, this would result in too many rows, so we chose to focus on only three national parks in California, 
                 since California has the most biodiversity of any state. Narrowing down the objective of our project and filtering our data 
                 accordingly helps us have a more manageable dataset and a more focused project. </p>
-            <p>
-                Each row is one species that has been observed, including plants and animals. The 33 total columns include 
+            <p>Each row is one species that has been observed, including plants and animals. The 33 total columns include 
                 information such as the species category, scientific name, common name, occurrence, nativeness, and abundance, 
                 but not all 33 are useful to our analysis since a few are incomplete or repetitive. The final number of rows in our 
                 data is [FILL THIS IN]. </p>
+            <h2>Quick View of Data</h2>
+            <iframe src="nidhi-d3/d3-plot.html" width="100%" height="600"></iframe>
+            <p>Each row is one species that has been observed, including plants and animals. The 33 total columns include 
+                information such as the species category, scientific name, common name, occurrence, nativeness, and abundance, 
+                but not all 33 are useful to our analysis since a few are incomplete or repetitive. The final number of rows in our 
+                data is [FILL THIS IN]. </p>
+            <p>ADD A PARAGRAPH HERE EXPLAINING EACH USEFUL COLUMN IN MORE DETAIL </p>
+            
         </section>
 
         <section>
-            <h3>Creators</h3>
+            <h3>Contact the Creators!</h3>
             <ul>
-                <li>Jasmine Chiou</li>
-                <li>Nidhi Hosamane</li>
-                <li>Ryan Masoud</li>
-                <li>Maahir Raval</li>
+                <li>Jasmine Chiou: <a href="mailto:chiou.ja@northeastern.edu">chiou.ja@northeastern.edu</a></li>
+                <li>Nidhi Hosamane: <a href="mailto:hosamane.n@northeastern.edu">hosamane.n@northeastern.edu</a></li>
+                <li>Ryan Masoud: <a href="mailto:masoud.r@northeastern.edu">masoud.r@northeastern.edu</a></li>
+                <li>Maahir Raval: <a href="mailto:raval.ma@northeastern.edu">raval.ma@northeastern.edu</a></li>
             </ul>
         </section>
     </main>
