--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 but not all 33 are useful to our analysis since a few are incomplete or repetitive. The final number of rows in our 
                 data is [FILL THIS IN]. </p>
             <h2>Quick View of Data</h2>
-            <iframe src="nidhi-d3/d3-plot.html" width="100%" height="600"></iframe>
+            <iframe src="df_head.html" width="100%" height="600"></iframe>
             <p>Each row is one species that has been observed, including plants and animals. The 33 total columns include 
                 information such as the species category, scientific name, common name, occurrence, nativeness, and abundance, 
                 but not all 33 are useful to our analysis since a few are incomplete or repetitive. The final number of rows in our 
