--- a/california.html
+++ b/california.html
@@ -20,6 +20,7 @@
         <section>
             <h2>About this page</h2>
             <p>This page features blah blah blah</p>
+            <iframe src="nidhi-d3/d3-plot.html" width="1200" height="1000"></iframe>
     </main>
 
     <footer>
