minor change to d3 plot

--- a/nidhi-d3/d3-plot.html
+++ b/nidhi-d3/d3-plot.html
@@ -6,10 +6,7 @@
     <title>Nidhi Interactive Plot</title>
 </head>
 <body>
-    <div id="plot">
-        <h1>Plot 1</h1>
-    </div>
-    
+    <div id="plot"></div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="d3-plot.js"></script>   
 </body>
