--- a/california.html
+++ b/california.html
@@ -18,8 +18,9 @@
 
     <main>
         <section>
-            <h2>About this page</h2>
-            <p>This page features blah blah blah</p>
+            <h2>About California'a Diverse Species</h2>
+            <p>This page highlights the vast biodiversity in the 3 selected national parks: Joshua Tree, 
+                Sequoia/Kings Canyon, and Redwood National Parks. Below is a look at ... [FINISH THIS]</p>
             <iframe src="nidhi-d3/d3-plot.html" width="1000" height="600"></iframe>
     </main>
 
