added some notes from guidelines

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualizing Biodiversity in California National Parks</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Visualizing Biodiversity in California National Parks</h1>
@@ -19,38 +21,51 @@
     <main>
         <section>
             <h2>Introduction</h2>
-            <p>Welcome to Visualizing Biodiversity in California National Parks, where you can explore various visualizations that 
-                demonstrate biodiversity and other species-related information such as abundance, nativeness, and more! This topic is 
-                interesting because biodiversity is key to having healthy ecosystems, which includes providing humans with clean air, 
-                water, food, medicine, and a stable climate in addition to the millions of other species on Earth. Focusing on biodiversity 
-                specifically in U.S. National Parks can give us valuable insights into how protected areas contribute to the preservation 
-                of diverse species and ecosystems. National Parks serve as crucial refuges for wildlife and plant species, many of which 
-                are threatened by human activities like deforestation, urbanization, and climate change. By studying biodiversity in 
-                these parks, we can better understand the impact of conservation efforts, inform future policies, and highlight the 
-                importance of preserving natural habitats not only for ecological balance but also for sustaining human well-being.</p>
-            <h2>Data Source and Details</h2>
-            <p>The data for this project comes from the National Park Service, which is a branch of the U.S. Department of the Interior. 
-                The specific project that the data comes from is called <a href="https://irma.nps.gov/NPSpecies/">“NPSpecies”</a>. 
-                NPSpecies is the National Park Service’s web-based tool for documenting the occurrence and status of species in U.S. 
-                national parks, and provides a way to build, manage, maintain, and share these park species lists by allowing users to 
-                filter specific parks, species type, etc. and export the data to an Excel/CSV file. All of the data on NPSpecies comes 
-                from an official government source, so it can be considered both reputable and accurate. The NPSpecies tool allows you to get, 
-                at most, information for all plant and animal species from all national parks in the United States. However, for the 
-                purposes of our project, this would result in too many rows, so we chose to focus on only three national parks in California, 
-                since California has the most biodiversity of any state. Narrowing down the objective of our project and filtering our data 
-                accordingly helps us have a more manageable dataset and a more focused project. </p>
-            <p>Each row is one species that has been observed, including plants and animals. The 33 total columns include 
-                information such as the species category, scientific name, common name, occurrence, nativeness, and abundance, 
-                but not all 33 are useful to our analysis since a few are incomplete or repetitive. The final number of rows in our 
-                data is [FILL THIS IN]. </p>
+            <p>Welcome to Visualizing Biodiversity in California National Parks, where you can explore various
+                visualizations that demonstrate biodiversity and other species-related information such as abundance,
+                nativeness, and more! This topic is interesting because biodiversity is key to having healthy
+                ecosystems, which includes providing humans with clean air, water, food, medicine, and a stable climate
+                in addition to the millions of other species on Earth. Focusing on biodiversity specifically in U.S.
+                National Parks can give us valuable insights into how protected areas contribute to the preservation of
+                diverse species and ecosystems. National Parks serve as crucial refuges for wildlife and plant species,
+                many of which are threatened by human activities like deforestation, urbanization, and climate change.
+                By studying biodiversity in these parks, we can better understand the impact of conservation efforts,
+                inform future policies, and highlight the importance of preserving natural habitats not only for
+                ecological balance but also for sustaining human well-being.</p>
+            <h2>Project Goals/Tasks</h2>
+            <ol>
+                <li>Compare biodiversity in each of the 3 chosen parks</li>
+                <li>Explore nativeness and abundance of species in each of the 3 parks</li>
+                <li>Evaluate the status of biodiversity in California and opportunities for improvement</li>
+            </ol>
+            <h2>Data Source, Size, and Attributes</h2>
+            <p>The data for this project comes from the National Park Service, which is a branch of the U.S. Department
+                of the Interior.
+                The specific project that the data comes from is called <a
+                    href="https://irma.nps.gov/NPSpecies/">“NPSpecies”</a>.
+                NPSpecies is the National Park Service’s web-based tool for documenting the occurrence and status of
+                species in U.S. national parks, and provides a way to build, manage, maintain, and share these park
+                species lists by allowing users to filter specific parks, species type, etc. and export the data to an
+                Excel/CSV file. All of the data on NPSpecies comes from an official government source, so it can be
+                considered both reputable and accurate. The NPSpecies tool allows you to get, at most, information for
+                all plant and animal species from all national parks in the United States. However, for the purposes of
+                our project, this would result in too many rows, so we chose to focus on only three national parks in
+                California, since California has the most biodiversity of any state. Narrowing down the objective of our
+                project and filtering our data accordingly helps us have a more manageable dataset and a more focused
+                project. </p>
+            <p>Each row is one species that has been observed, including plants and animals. The 33 total columns
+                include information such as the species category, scientific name, common name, occurrence, nativeness,
+                and abundance, but not all 33 are useful to our analysis since a few are incomplete or repetitive. The
+                final number of rows in our data is [FILL THIS IN]. </p>
             <h2>Quick View of Data</h2>
             <iframe src="df_head.html" width="100%" height="600"></iframe>
-            <p>Each row is one species that has been observed, including plants and animals. The 33 total columns include 
-                information such as the species category, scientific name, common name, occurrence, nativeness, and abundance, 
-                but not all 33 are useful to our analysis since a few are incomplete or repetitive. The final number of rows in our 
-                data is [FILL THIS IN]. </p>
+            <p>Each row is one species that has been observed, including plants and animals. The 33 total columns
+                include information such as the species category, scientific name, common name, occurrence, nativeness,
+                and abundance, but not all 33 are useful to our analysis since a few are incomplete or repetitive. The
+                final number of rows in our data is [FILL THIS IN]. </p>
             <p>ADD A PARAGRAPH HERE EXPLAINING EACH USEFUL COLUMN IN MORE DETAIL </p>
-            
+            <p>dont forget: At least two links to the references. </p>
+
         </section>
 
         <section>
@@ -68,4 +83,5 @@
         <p>DS4200 2024</p>
     </footer>
 </body>
+
 </html>
