--- a/invasive.html
+++ b/invasive.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualizing Biodiversity in California National Parks</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Visualizing Biodiversity in California National Parks</h1>
@@ -19,12 +21,15 @@
     <main>
         <section>
             <h2>About this page</h2>
-            <p>This page talks about blah blah blah</p>
-            <iframe src="sankey.html" width="100%" height="600"></iframe>
+            <p>add something about weaknesses and limitations on this page</p>
+            <p>A summary for your findings, including what you have learned from the data visualization and what can be
+                done in the future.</p>
+                <iframe src="sankey.html" width="100%" height="600"></iframe>
     </main>
 
     <footer>
         <p>DS4200 2024</p>
     </footer>
 </body>
+
 </html>
