--- a/index.html
+++ b/index.html
@@ -53,17 +53,53 @@
                 California, since California has the most biodiversity of any state. Narrowing down the objective of our
                 project and filtering our data accordingly helps us have a more manageable dataset and a more focused
                 project. </p>
-            <p>Each row is one species that has been observed, including plants and animals. The 33 total columns
-                include information such as the species category, scientific name, common name, occurrence, nativeness,
-                and abundance, but not all 33 are useful to our analysis since a few are incomplete or repetitive. The
-                final number of rows in our data is [FILL THIS IN]. </p>
+    
             <h2>Quick View of Data</h2>
-            <iframe src="df_head.html" width="100%" height="600"></iframe>
+
+            <iframe src="df_head.html" width="100%" height="420px"></iframe>
             <p>Each row is one species that has been observed, including plants and animals. The 33 total columns
                 include information such as the species category, scientific name, common name, occurrence, nativeness,
                 and abundance, but not all 33 are useful to our analysis since a few are incomplete or repetitive. The
-                final number of rows in our data is [FILL THIS IN]. </p>
-            <p>ADD A PARAGRAPH HERE EXPLAINING EACH USEFUL COLUMN IN MORE DETAIL </p>
+                final number of columns in our data is 26 along with 4424 rows. </p>
+
+            <h3>Column Names</h3>
+            <ul>
+                <li>Park Code: National park abbreviation. </li>
+                <li>Park Name: National park name </li>
+                <li>Category: High-level taxonomic grouping</li>
+                <li>Category Sort:  </li> 
+                <li>Order: Taxonomic </li>
+                <li>Family: Taxonomic family </li>
+                <li>Taxon Code: Unique code to categorize and classify different species</li>
+                <li>TSN: Taxonomic Serial Number: a unique taxon identifier used by the Integrated Taxonomic
+                    Information System.</li>
+                <li>Taxon Record Status: </li>
+                <li>Scientific Name: Scientific name used by national park. </li>
+                <li>Common Names: Common name preferred by park, or common name from ITIS </li>
+                <li>Synonyms: A scientific name used to identify the park species in the past, or that may be used in
+                    other regions or by other taxonomic classification systems. </li>
+                <li>Park Accepted: Designation that a species scientific name is preferred by the park. </li>
+                <li>Sens?: </li>
+                <li>Record Status: </li> 
+                <li>Occurrence: A designation given to park species records that describes a park’s knowledge of a
+                    species’ presence in the park.</li>
+                <li>Nativeness: </li>
+                <li>Abundance: The amount of </li>
+                <li>NPS Tags: A designation given to a park species, or that acts as a modifier for another species
+                    attribute</li>
+                <li>References: A document, publication, article, database, or other information resource that contains
+                    information on one or more park species.</li>
+                <li>Observations: Subjective evidence (no physical proof taken) as to the identity and the
+                    location of an organism. </li>
+                <li>Vouchers: Physical evidence used to confirm identity and prove an organism was found in a
+                    particular location.  </li>
+                <li>T&E: U.S. Fish and Wildlife Service Threatened or Endangered species status associated with
+                    the species.</li>
+                <li>State Status: Designation given to speicies by the state in which the park occurs   </li>
+                <li>GRank: Global Rank - An assessment of the level of rarity or abundance of a taxon throughout
+                    its range </li>
+                <li>SRank: State Rank – an assessment of the rarity or abundance of a taxon within a state. </li>
+            </ul>
             <p>dont forget: At least two links to the references. </p>
 
         </section>
