--- a/invasive.html
+++ b/invasive.html
@@ -21,10 +21,17 @@
     <main>
         <section>
             <h2>About this page</h2>
-            <p>add something about weaknesses and limitations on this page</p>
+            <p>This page explores the abundance and nativeness of species in California's National Parks, allowing us to
+                explore how this plays into biodiversity and th preservation of these parks' ecosystems.</p>
+            <h4>Abundance and Nativeness</h4>
+            <iframe src="heatmap.html" width="100%" height="600"></iframe>
             <p>A summary for your findings, including what you have learned from the data visualization and what can be
                 done in the future.</p>
-                <iframe src="sankey.html" width="100%" height="600"></iframe>
+            <h4>A Closer Look</h4>
+            <iframe src="sankey.html" width="100%" height="600"></iframe>
+            <p>A summary for your findings, including what you have learned from the data visualization and what can be
+                done in the future.</p>
+            <p>add something about weaknesses and limitations on this page</p>
     </main>
 
     <footer>
