added boxplot for static visualization, and interactive plot with a bit of a description.

--- a/california.html
+++ b/california.html
@@ -22,6 +22,10 @@
             <p>This page highlights the vast biodiversity in the 3 selected national parks: Joshua Tree, 
                 Sequoia/Kings Canyon, and Redwood National Parks. Below is a look at ... [FINISH THIS]</p>
             <iframe src="nidhi-d3/d3-plot.html" width="1000" height="600"></iframe>
+
+            <h3>Vouchers and References</h3>
+            <p>something about this plot</p>
+            <iframe src="boxplot.png" width="100%" height="600"></iframe>
     </main>
 
     <footer>
