--- a/invasive.html
+++ b/invasive.html
@@ -24,9 +24,9 @@
             <p>This page explores the abundance and nativeness of species in California's National Parks, allowing us to
                 explore how this plays into biodiversity and th preservation of these parks' ecosystems.</p>
             <h4>Abundance and Nativeness</h4>
-            <iframe src="heatmap.html" width="100%" height="600"></iframe>
-            <p>A summary for your findings, including what you have learned from the data visualization and what can be
-                done in the future.</p>
+            <iframe src="heatmap.html" width="100%" height="500"></iframe>
+            <iframe src="park_species_interactive_abundance_chart.html" width = "100%" height = "600"></iframe>
+            <p>This visualization allows for parks with invasive species to be easily identified by observing which species are non-native and how abundant they are in comparison to native species. By selecting different parks using radio buttons, various invasive species from different parks can be compared and how they mainfest in different locations.</p>
             <h4>A Closer Look</h4>
             <iframe src="sankey.html" width="100%" height="600"></iframe>
             <p>A summary for your findings, including what you have learned from the data visualization and what can be
