added graphs to website

--- a/california.html
+++ b/california.html
@@ -26,6 +26,14 @@
             <h3>Vouchers and References</h3>
             <p>something about this plot</p>
             <iframe src="boxplot.png" width="100%" height="600"></iframe>
+
+            <h3>species family</h3>
+            <iframe src="unique_species.html" width="100%" height="600"></iframe>
+            <p> something about this plot</p>
+
+            <h3>species richnes by abundance</h3>
+            <iframe src="species_richness_by_abundance.png" width="100%" height="600"></iframe>
+            <p> something about this plot</p>
     </main>
 
     <footer>
