added in descriptions

--- a/california.html
+++ b/california.html
@@ -24,8 +24,15 @@
             <iframe src="nidhi-d3/d3-plot.html" width="1000" height="600"></iframe>
 
             <h3>Vouchers and References</h3>
-            <p>something about this plot</p>
             <iframe src="boxplot.png" width="100%" height="600"></iframe>
+            <p>This boxplot visualization displays the combined counts of vouchers and references across various 
+                categories in the three national parks. The visualization highlights variations in species documentation 
+                across parks and categories. The boxplot also has zero outliers because they may indicate gaps in species 
+                surveys or a lack of physical evidence for certain species in the parks. These gaps indicate the importance of 
+                expanding documentation efforts, especially in categories with low representation. By analyzing the distribution
+                of vouchers and references, park managers can identify underrepresented species groups and prioritize the future
+                research or conservation efforts to ensure comprehensive biodiversity records. 
+            </p>
 
             <h3>species family</h3>
             <iframe src="unique_species.html" width="100%" height="600"></iframe>
