--- a/invasive.html
+++ b/invasive.html
@@ -26,7 +26,18 @@
             <h4>Abundance and Nativeness</h4>
             <iframe src="heatmap.html" width="100%" height="500"></iframe>
             <iframe src="park_species_interactive_abundance_chart.html" width = "100%" height = "600"></iframe>
-            <p>This visualization allows for parks with invasive species to be easily identified by observing which species are non-native and how abundant they are in comparison to native species. By selecting different parks using radio buttons, various invasive species from different parks can be compared and how they mainfest in different locations.</p>
+            <p>In this visualization we are examining the total species count across abundance categories for three national parks.
+                The stacked bar chart and scatter plot categorizes species by abundance levels, such as abundant, common, occasional, rare
+                uncommon, and unknown. Each bar segment represents the contribution of each species counts from individual parks which offer a 
+                comparative view of biodiversity throughout these parks.
+            </p>
+            <p> The patterns displayed in this graph could help identify potential invasive species, because invasive species often exhibit 
+                irregular abundance patterns. They may suddenly appear in abundant or occasional categories when they were previously 
+                absent or underrepresented. This visualization allows for park managers and ecologists to monitor the shifts in species abundance,
+                which can act as an early indicator of invasive species disrupting ecosystems. By focusing on abundance anomolies or unexplained 
+                increses in certain categories, stakeholders can prioritize further investigation and create targeted strategies to manage invasive 
+                species before they spread. 
+            </p>
             <h4>A Closer Look</h4>
             <iframe src="sankey.html" width="100%" height="600"></iframe>
             <p>A summary for your findings, including what you have learned from the data visualization and what can be
