added description to heatmap

--- a/invasive.html
+++ b/invasive.html
@@ -25,6 +25,14 @@
                 explore how this plays into biodiversity and th preservation of these parks' ecosystems.</p>
             <h4>Abundance and Nativeness</h4>
             <iframe src="heatmap.html" width="100%" height="500"></iframe>
+            <p>This interactive heatmap shows use the species count data categorized by abundance and nativeness between the three parks. 
+                Users can toggle between radio buttons to show the species count, abundance, and nativeness of each park. The x-axis represents the abundance 
+                categories, while the y-axis represents nativeness. The blue color gradient indicates the number of species with the combinations of abundance and 
+                nativeness, allowing users to quickly identify areas which high or low species counts, providing a visual representation of the species 
+                distribution. This intersection of abundance and nativeness for each park offers a detailed categorical view of the species distribution. This is 
+                valueable when exploring the biodiversity data in a way that provides more granular insights, facilitating better-informed decision-making for conservation 
+                and management efforts. The efforts can then be placed in areas where it seems an invasive species may be dominating the area, and to help preserve the ecosystem. 
+            </p>
             <iframe src="park_species_interactive_abundance_chart.html" width = "100%" height = "600"></iframe>
             <p>In this visualization we are examining the total species count across abundance categories for three national parks.
                 The stacked bar chart and scatter plot categorizes species by abundance levels, such as abundant, common, occasional, rare
